--- a/portfolio.html
+++ b/portfolio.html
@@ -237,6 +237,21 @@
             <li><a class="join linkedin" href=""></a></li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+          <form class="form-footer">
+            <label class="footer-label">
+              <input class="foter-input" type="email" placeholder="E-mail" />
+            </label>
+
+            <button class="button-subscribe" type="submit">
+              <svg class="footer-subscribe-svg" widt="24px" height="24px">
+                <use href="./img/symbol-defs.svg#send"></use>
+              </svg>
+              Подписаться
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
